<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tvCartHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:gravity="start"
        android:letterSpacing="0.1"
        android:paddingBottom="@dimen/common_padding"
        android:paddingTop="@dimen/common_padding"
        android:text="@string/your_shopping_cart"
        android:textAllCaps="true"
        android:textSize="@dimen/header_text_size"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/lvCartItems"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/llTotal"
        android:layout_below="@id/tvCartHeader" />

    <LinearLayout
        android:id="@+id/llTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llBottom"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/common_padding"
        android:paddingTop="@dimen/common_padding"
        android:weightSum="1">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:gravity="center_vertical|end"
            android:text="@string/total_price"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTotalPrice"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:gravity="center"
            android:text=""
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/bClear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="#E42C2A"
            android:drawableLeft="@mipmap/ic_delete_black_24dp"
            android:drawablePadding="5dp"
            android:paddingLeft="31dp"
            android:paddingRight="31dp"
            android:drawableTint="#fff"
            android:text="@string/clear_cart"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bShop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="#009688"
            android:paddingLeft="36dp"
            android:paddingRight="36dp"
            android:drawableLeft="@mipmap/ic_shopping_cart_black_24dp"
            android:drawablePadding="5dp"
            android:drawableTint="#fff"
            android:text="@string/chkout"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>
