<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView android:id="@+id/tvViewShoppingCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textColor="@color/blue"
        android:gravity="center"
        android:paddingBottom="@dimen/common_padding"
        android:paddingTop="@dimen/common_padding"
        android:text="@string/shopping_cart"
        android:textSize="@dimen/small_header_text_size"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/currentItemText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvViewShoppingCart"
        android:gravity="start"
        android:paddingBottom="@dimen/common_padding"
        android:paddingTop="@dimen/common_padding"
        android:textAllCaps="true"
        android:textSize="@dimen/header_text_size"
        android:textStyle="bold"
        android:text="Current Item"
        android:letterSpacing="0.1"
        android:alpha="0.8"/>

    <TextView
        android:id="@+id/tvProductName"
        android:layout_below="@+id/currentItemText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingBottom="@dimen/common_padding"
        android:paddingTop="@dimen/common_padding"
        android:textStyle="bold"
        android:text="Item Title"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/tvProductDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvProductName"
        android:paddingBottom="@dimen/common_padding"
        android:paddingTop="@dimen/common_padding"
        android:textSize="14sp"
        android:lineSpacingExtra="5dp"
        android:fontFamily="sans-serif-light"
        />

    <ImageView android:id="@+id/ivProductImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/llAction"
        android:layout_below="@id/tvProductDesc"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        />

    <LinearLayout
        android:id="@id/llAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:gravity="center_vertical|end"
            android:layout_gravity="center_vertical"
            android:text="@string/quantity"
            android:textAllCaps="true" />

        <Spinner
            android:id="@+id/spQuantity"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical"/>

        <Button
            android:id="@+id/bOrder"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_check_circle_black_24dp"
            android:drawableTint="#fff"
            android:paddingLeft="59dp"
            android:paddingRight="59dp"
            android:drawablePadding="5dp"
            android:layout_weight="0.5"
            android:background="#009688"
            android:text="@string/add"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>
    </LinearLayout>
</RelativeLayout>
